--- a/Tema2/Ejercicios/EjercicioEspecificidad/EjercicioEspecificidad.html
+++ b/Tema2/Ejercicios/EjercicioEspecificidad/EjercicioEspecificidad.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio Especificidad</title>
+
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1 class="titulo" style="color:darkred">Título Principal</h1>
+    <p id="parrafo">Este es un párrafo de ejemplo</p>
+    <div>
+        <p class="texto">Texto dentro de un div</p>
+    </div>
 </body>
 </html>
